[gd_scene load_steps=6 format=3 uid="uid://dfuh8rcoekymt"]

[ext_resource type="Script" uid="uid://ej7bx28mgtjc" path="res://scripts/stats_page.gd" id="1_stats"]
[ext_resource type="Texture2D" uid="uid://cmo7ik5c4ggi1" path="res://assets/images/start_page_bg.png" id="2_bg"]
[ext_resource type="Texture2D" uid="uid://c8acjjul474lb" path="res://assets/home_page_button.png" id="3_home"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card"]
bg_color = Color(1, 1, 1, 0.901961)
shadow_color = Color(0, 0, 0, 0.117647)
shadow_size = 10
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_score"]
bg_color = Color(0.2, 0.6, 1, 1)
shadow_size = 2

[node name="StatsPage" type="Control"]
custom_minimum_size = Vector2(1280, 800)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_stats")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 6

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.352941)

[node name="MainCard" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="MarginContainer" type="MarginContainer" parent="MainCard"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MainCard/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HeaderBox" type="HBoxContainer" parent="MainCard/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HomeButton" type="Button" parent="MainCard/MarginContainer/VBoxContainer/HeaderBox"]
custom_minimum_size = Vector2(100, 80)
layout_mode = 2
icon = ExtResource("3_home")
flat = true
expand_icon = true

[node name="TitleLabel" type="Label" parent="MainCard/MarginContainer/VBoxContainer/HeaderBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 40
text = "Jurnalul Exploratorului"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScorePanel" type="PanelContainer" parent="MainCard/MarginContainer/VBoxContainer/HeaderBox"]
custom_minimum_size = Vector2(150, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_score")

[node name="VBox" type="VBoxContainer" parent="MainCard/MarginContainer/VBoxContainer/HeaderBox/ScorePanel"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MainCard/MarginContainer/VBoxContainer/HeaderBox/ScorePanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "SCOR FINAL"
horizontal_alignment = 1

[node name="ScoreValueLabel" type="Label" parent="MainCard/MarginContainer/VBoxContainer/HeaderBox/ScorePanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "0"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainCard/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainCard/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="StatsContainer" type="VBoxContainer" parent="MainCard/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[connection signal="pressed" from="MainCard/MarginContainer/VBoxContainer/HeaderBox/HomeButton" to="." method="_on_home_button_pressed"]
